CIRC-1886 add dropdown for item service point